styles.css
body {
    display: flex;
    flex-direction: column;
    margin: 0;
}

.header {
    display: flex;
    background-color: #1F2937;
    justify-content: space-between;
    padding: 16px;
}

.header ul {
    display: flex;
    align-self: center;
    list-style: none;
    padding: 0;
    margin: 0;
    margin-right: 200px;
    gap: 32px;
}

.header ul a {
    color: #caab51;
    font-size: 18px;
    text-decoration: none;
}

.logo {
    display: flex;
    margin-left: 200px;
    align-items: center;
    font-size: 36px;
    color: #caab51;
    gap: 16px;
}

.logo img {
    width: 50px;
    height: auto;
}

.first {
    height: 400px;
    background-color: #1F2937;
    display: flex;
    justify-content: center;
    align-items: center;
}

.first .container {
    display: flex;
    gap: 60px;
}

.first .container .right img {
    width: auto;
    height: 250px;
    border: 4px solid #caab51;
}

.first .container .left {
    max-width: 400px;
    display: flex;
    flex-direction: column;
    gap: 4px;
}

.first .container .left .main-text {
    font-size: 42px;
    color: #caab51;
}

.first .container .left .secondary-text {
    color: #b39141;
    margin-bottom: 16px;
}

.button {
    padding: 8px;
    width: 120px;
    border-radius: 8px;
    color: #caab51;
    font-weight: bold;
    background-color: #523a15;
}

h1 {
    margin: 0;
}

.second {
    height: 400px;
    display: flex;
    flex-direction: column;
    background-color: #caab51;
    justify-content: flex-start;
    align-items: center;
}

.second .container {
    display: flex;
    gap: 32px;
}

.second .title {
    color: #523a15;
    font-size: 28px;
}

.russet img, .red img, .white img, .purple img {
    width: 200px;
    height: 130px;
    border: 4px solid #523a15;
    border-radius: 16px;
    margin-bottom: 16px;
}

.russet .text, .red .text, .white .text, .purple .text {
    text-align: center;
    font-size: 24px;
    color: #523a15;
}

.third {
    height: 400px;
    display: flex;
    background-color: #523a15;
    justify-content: center;
    align-items: center;
}

.third .container {
    display: flex;
    flex-direction: column;
    max-width: 800px;
}

.third .container .quote {
    font-size: 32px;
    color: #caab51;
}

.third .container .sign {
    font-size: 28px;
    align-self: flex-end;
    color: #d5c96b;
    margin-right: 100px;
}

.fourth {
    height: 300px;
    display: flex;
    background-color: #caab51;
    justify-content: center;
    align-items: center;
}

.fourth .container {
    display: flex;
    background-color: #1F2937;
    width: 1000px;
    height: 150px;
    justify-content: space-between;
    align-items: center;
    border: 4px solid #caab51;
    border-radius: 16px;
}

.fourth .container .left {
    color: #caab51;
    font-size: 18px;
    margin-left: 150px;
}

.fourth .container .left div strong {
    font-size: 22px;
}

.fourth .container .right {
    margin-right: 150px;
}

.footer {
    background-color: #1F2937;
    display: flex;
    height: 55px;
    justify-content: center;
    align-items: center;
    padding: 16px;
}

.footer .copy-right {
    color: #caab51;
    font-size: 18px;
}

